--- a/resources/css/scss/home.scss
+++ b/resources/css/scss/home.scss
@@ -456,10 +456,10 @@
       border-radius: 50%;
       width: 228px;
       height: 228px;
-      &::before{
+      &::after{
          content:'';
          position: absolute;
-         z-index: 1;
+         z-index: -1;
          top: -.25rem ;
          left: -.25rem;
          width: calc(100% + .5rem);
@@ -479,10 +479,9 @@
          height: 100%;
          object-fit: fill;
          border-radius: 50%;
-         z-index: 5;
       }
       &:hover, &.active {
-         &::before{
+         &::after{
            // animation-play-state: running;
             animation: animateborder 2s ease infinite;
             box-shadow: 0px 1px 5px 2px $mainColor;
